--- a/trunk/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/trunk/app/views/devise_mailer/invitation_instructions.html.erb
@@ -2,7 +2,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title><%= "#{@invitor.name}邀请您来课件交流系统联络" %></title>
+  <title><%= "#{@invitor.name}邀请您来课件交流系统建立联络" %></title>
 </head>
 <body>
 <table width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#F4F4F4" style="font-family:Arial;"><tbody><tr><td align="center">
