--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
         <p>
           <%= image_tag 'p.png',:alt => '通过课件交流系统，您可以迅速定位最感兴趣的课程，轻松获取大家共同维护的最优质的一份学习资料。然而，课件系统不仅是一个出色的学习资源交流平台，她更是一个开放的在线学习社区。在这里，您可以把遇到的难题发出来，大家共同切磋，也可以让大家为您的学习目标出谋划策。在这里，我们共同进步！' %>
         </p>
-          <p><a href="javascript:void(0)" id="loginhuge" class="button primary">关注我感兴趣的学科领域</a></p>
+        <p><a href="<%=topics_path%>" id="loginhuge" class="button primary">第一步: 关注感兴趣的学科领域</a></p>
       </div>
       <div class="secondary_info">
         <div class="slide_frame">
@@ -217,9 +217,9 @@ $('#core_addcw2').click(function(){return KTV.addCW()});
       <a href="<%= user_path(@hottest_user) %>" ><span class="yahe blue bigtitle" style="color:#1D8B74;"><%= @hottest_user.name %></span></a>
       <%= renzheng_teacher(@hottest_user) %>
 		  <% if (current_user and current_user.followed?(@hottest_user)) %>
-      <a class="hotbutton follow-btn" id="<%= @hottest_user.id %>" followed="<%= @hottest_user.id %>" follow="false">关注</a>
-      <% else %>
       <a follow="true" followed="<%= @hottest_user.id %>" id="<%= @hottest_user.id %>" class="hotbutton unfollow-btn">已关注</a>
+      <% else %>
+      <a class="hotbutton follow-btn" id="<%= @hottest_user.id %>" followed="<%= @hottest_user.id %>" follow="false">关注</a>
       <% end %>
   </h3>
   <p>
