--- a/trunk/app/views/topics/index.html.erb
+++ b/trunk/app/views/topics/index.html.erb
@@ -261,7 +261,7 @@ function queryExec() {
         $('#js-ad-show8').nextAll().remove();
     }
     var linkUrl = "/coursewares",
-        jsonUrl = "/coursewares_with_page";
+        jsonUrl = "/coursewares_with_page/";
     autoLayout.pageNums = 0;
     autoLayout.loading = true;
     autoLayout.isHasNextPage = true;
@@ -314,7 +314,7 @@ im(function () {
     });
     var delTagIds = 0;
     var linkUrl = "/coursewares",
-        jsonUrl = "/coursewares_with_page";
+        jsonUrl = "/coursewares_with_page/";
     autoLayout.init({
         contentID: "content",
         rightLoad: true,
