--- a/trunk/app/assets/javascripts/ktv/pin.js.erb
+++ b/trunk/app/assets/javascripts/ktv/pin.js.erb
@@ -4179,7 +4179,7 @@ im.zm.autoLayout.prototype = {
         } else {
             var e = (loginUser.avatarTiny ? 'src="' + loginUser.avatarTiny + '"' : "");
             l = ['<ul class="comment">' + q + K + "</ul>", '<div class="add-comment" style="display:none;">', '<h3 class="cf"><a class="commentClose">close</a>添加评论</h3>', '<div class="commentbody cf">', '<a class="avatar"><img  ' + e + " /></a>", '<div class="comment-form">', '<span class="input-border">', '<textarea class="comment-textarea"></textarea>', "</span>", '<div class="cmt-submit cf">', '<span class="floatright count"><em class="lightblue">0</em>/140</span>', '<a href="javascript:void(0);" class="unpincomment">提交</a>', "</div>", "</div>", "</div>", "</div>", '<div class="morecomment" ' + E + '><a href="' + uri("URI_BOARD_PIC", picBoard[j].id) + '" class="changecolor" target="_blank">还有<em>' + (parseInt(picBoard[j].commentCount) - 2) + "</em>条评论&gt;&gt;</a></div>"].join("");
-            D = '<a class="lk-comment" style="display:none;">评论</a>'
+            D = '<a class="lk-comment" style="display:none;"></a>' //todo:评论
         }
         return ['<div class="share-mod" id="' + autoLayout.divId + '" userId = "' + picBoard[j].userId + '" sharePicId = "' + picBoard[j].sharePicId + '" dataId="' + picBoard[j].id + '" columns="' + s + '" style="position:' + G + ";opacity:" + autoLayout.opacityVal + ";left:" + f + ";top:" + y + ';">', '<div class="actions">' + b + "</div>", '<div class="sharecontainer">', '<div class="share-img" style="height:' + t + 'px;">' + a, '<a href="' + uri("URI_BOARD_PIC", picBoard[j].id) + '" target="_blank"><img class="picUrl" width="' + g + '" height="' + t + '" src="/zm_dian.gif" data-delay="' + picBoard[j].mediumZoom + '" alt="' + picBoard[j].shareTitle + '" title="' + picBoard[j].shareTitle + '" /></a>', "</div>", '<div class="shareprofile">', '<p class="contentsms" isorigin="' + m + '">' + x + "</p>", '<p class="quantity">' + D + '<span class="favourite-num">' + z + "</span></p>", "</div>", "</div>", '<div class="commentcontainer">' + l, "</div>", "</div>"].join("")
     },
@@ -5267,7 +5267,7 @@ window.autoLayout = {
                 } else {
                     var loginUserImg = (loginUser.avatarTiny ? 'src="' + loginUser.avatarTiny + '"' : "");
                     surpriseArea = ['<ul class="comment">' + shareContent + comentContent + "</ul>", '<div class="add-comment" style="display:none;">', '<h3 class="cf"><a class="commentClose">close</a>添加评论</h3>', '<div class="commentbody cf">', '<a class="avatar"><img  ' + loginUserImg + " /></a>", '<div class="comment-form">', '<span class="input-border">', '<textarea class="comment-textarea"></textarea>', "</span>", '<div class="cmt-submit cf">', '<span class="floatright count"><em class="lightblue">0</em>/140</span>', '<a href="javascript:void(0);" class="unpincomment">提交</a>', "</div>", "</div>", "</div>", "</div>", '<div class="morecomment" ' + _commentStyle + '><a href="' + uri("URI_BOARD_PIC", picBoard[j].id) + '" class="changecolor" target="_blank">还有<em>' + (parseInt(picBoard[j].commentCount) - 2) + "</em>条评论&gt;&gt;</a></div>"].join("");
-                    mess = '<a class="lk-comment" style="display:none;">评论</a>'
+                    mess = '<a class="lk-comment" style="display:none;"></a>' //todo:评论
                 }
                 var inserDiv = ['<div class="share-mod" id="' + autoLayout.divId + '" userId = "' + picBoard[j].userId + '" sharePicId = "' + picBoard[j].sharePicId + '" dataId="' + picBoard[j].id + '" columns="' + cols + '" style="position:' + tPos + ";opacity:" + autoLayout.opacityVal + ";left:" + _le + ";top:" + _to + ';">', '<div class="actions">' + _action + "</div>", '<div class="sharecontainer">', '<div class="share-img" style="height:' + picHeight + 'px;">' + priceCon, '<a href="' + picBoard[j].path + '"><img class="picUrl" width="' + picWidth + '" height="' + picHeight + '" src="/zm_dian.gif" data-delay="' + picBoard[j].mediumZoom + '" alt="' + picBoard[j].shareTitle + '" title="' + picBoard[j].shareTitle + '" /></a>', "</div>", '<div class="shareprofile">', '<p class="contentsms" isorigin="' + isOrigin + '">' + o + "</p>", '<p class="quantity">' + mess + '<span class="favourite-num">' + _reshare + "</span></p>", "</div>", "</div>", '<div class="commentcontainer">' + surpriseArea, "</div>", "</div>"].join("");
                 if (autoLayout.defaults.isPosition) {
@@ -5573,13 +5573,15 @@ window.autoLayout = {
         var c = null,
             b = null;
         d.live("mouseenter", function () {
+          //todo
             var l = $(this);
             clearTimeout(c);
             c = setTimeout(function () {
-                l.addClass("onshare-mod").find(".sharebutton").show();
+                l.addClass("onshare-mod").find(".sharebutton").hide()//.show();
                 l.find(".lk-comment").show()
             }, 50)
         }).live("mouseleave", function () {
+          //todo
             var l = $(this);
             clearTimeout(c);
             l.removeClass("onshare-mod").find(".sharebutton").hide();
