--- a/trunk/app/views/coursewares/_upload.html.erb
+++ b/trunk/app/views/coursewares/_upload.html.erb
@@ -1,11 +1,11 @@
 <div id="upload">
   <%= yield :upload_armpit%>
-  <h1>请上传课件的PDF版</h1>
+  <h1>请选择源文件 <span style="font-size:14px">(目前支持格式: PDF, Djvu)</span></h1>
   <div class="steps">
     <div class="presentation_wrapper">
       <div class="step">
         <div id="uploader" data-session-key-name="_secure_speakerd_session" data-session-key="BAh7CEkiD3Nlc3Npb25faWQGOgZFRkkiJTk3MzcxNDdmOGI3ZDI1ZjIyYzAzMDFhMWRkMzI2MmM4BjsAVEkiEF9jc3JmX3Rva2VuBjsARkkiMVRZdFFsdEJzMXBiRkxhUktIbW5lNnNCL0hIendQaGRLSnJIbU8rRTBkU2s9BjsARkkiDHVzZXJfaWQGOwBGSSIdNGYyZmI2NGUwZjZmMjcwMDFmMDEwYTNhBjsARg%3D%3D--77268f8e0eab9ba9e8d742ed1b0d5fe29c81192d">
-          <input accept="application/pdf" id="presentation_pdf" name="presentation[pdf]" type="file" />
+          <input id="presentation_pdf" name="presentation[pdf]" type="file" />
         </div>
       </div>
       <h1>发布进度</h1>
