--- a/trunk/app/views/coursewares/new.html.erb
+++ b/trunk/app/views/coursewares/new.html.erb
@@ -8,7 +8,7 @@
         <div class="primary_info" id="biaozhu_cw" style="display:none">
           <h1>标注课件信息</h1>
 
-  <p><label for="presentation_title">课件标题</label> <input class="text" id="presentation_title" name="presentation[title]" size="30" type="text" placeholder="例如：[北京大学]郭懋正:2011年阅读与练习 - 1"/></p>
+  <p><label for="presentation_title">课件标题</label> <input class="text" id="presentation_title" name="presentation[title]" size="30" type="text" placeholder="例如：[北京大学]郭懋正:2011阅读与练习第1次"  value="<%= cookies[:presentation_pretitle] %><%= ': ' if cookies[:presentation_pretitle].present? %>"/></p>
   <p><label for="presentation_topic">领域</label> <input class="text" id="presentation_topic" name="presentation[topic]" size="30" type="text" placeholder="例如：数学分析" value="<%= cookies[:presentation_topic] %>"/></p>
 
   <p class="submit">
