出去玩之前最后的线上修正

--- a/trunk/app/assets/javascripts/ktv/pin.js.erb
+++ b/trunk/app/assets/javascripts/ktv/pin.js.erb
@@ -3307,9 +3307,6 @@ im.zm.fnDropmenu = function (b, a) {
 };
 im.zm.messageShow = !1;
 im.zm.detailPic = function (f, d) {
-  // todo: before entering open a preview window
-  window.location.href="/coursewares/"+f;
-  return false;
     $("#zoomDetail").remove();
     $("#shoujiTips").remove();
     var b = ['<div id="zoomDetail" class="zoomlayer">', '<a id="zoomButt" class="bgimg shut" style="display:none;" href="###"><span>点击两边的空白处也可以关闭</span></a><a class="bgimg preimg" title="上一张" style="display:none;"></a><a class="bgimg nextimg" title="下一张" style="display:none;"></a>', '<div class="sharedetail"></div>', "</div>"].join("");
@@ -10366,7 +10363,10 @@ $(function () {
             })
         })
     }
+    //todo
+    /*
     $(".picUrl").die().live("click", function () {
+      
         if ((navigator.userAgent.indexOf("MSIE") > 0 && parseInt($.browser.version) < 7) || navigator.userAgent.toLowerCase().match(/iPad/i) == "ipad") {
             return true
         } else {
@@ -10384,6 +10384,7 @@ $(function () {
             }
         }
     });
+    */
     var cursorPosition = {
         get: function (textarea) {
             var rangeData = {
