--- a/trunk/app/assets/stylesheets/ktv/__flo.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__flo.css.scss.erb
@@ -1978,7 +1978,7 @@
       box-shadow: inset 0px 1px 0px #ebebeb;
       border-top: 1px solid #cdcdcd;
       position: relative;
-      z-index: 100
+      z-index: 0; 
   }
 
   footer .footer-content {
