--- a/trunk/app/views/users/show.html.erb
+++ b/trunk/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
 				<a href="/bds/<%= @user.slug %>" class="blue"><%= @user.coursewares_count %>个课件</a>
 				</span>
 			</div>
-			<span class="sheetname marginleft" id="fix-string05"><%= @user.name %></span>
+			<span class="sheetname marginleft"><%= @user.name %></span>
 		</div>
 		<script type="text/javascript">
 		<% content_for :butt2 do %>
