在北戴河站：添加首页可指向滚动的最新课件

--- a/trunk/app/assets/stylesheets/ktv/__sdk.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__sdk.css.scss.erb
@@ -1031,7 +1031,7 @@
       left: 0;
       z-index: 2;
   }
-  html.no-touch div.presentation a:hover div.scrubber {
+  div.presentation a:hover div.scrubber {
       opacity: 1;
       visibility: visible;
   }
