--- a/trunk/app/assets/javascripts/ktv/ktv.js.coffee.erb
+++ b/trunk/app/assets/javascripts/ktv/ktv.js.coffee.erb
@@ -150,6 +150,8 @@ KTV.login = ->
   im.zm.login();
   $("#loginLayout").definedDialog("open");
 KTV.addCW = ->
+  # todo
+  return true
   im.zm.newcw()
   $("#loginLayout").definedDialog("open")
   return false
