--- a/trunk/app/views/coursewares/latest.html.erb
+++ b/trunk/app/views/coursewares/latest.html.erb
@@ -36,7 +36,7 @@
 </div>
 <div class="hotword floatright cf">
 <span><input id="isProductCheckBox" type="checkbox"></span>
-<span class="onlycom">只看视频</span>
+<span class="onlycom">只看讲义</span>
 <span class="split">|</span>
 <h4>排序：</h4>
 <ul id="ulQueryOrder">
