--- a/trunk/app/assets/stylesheets/ktv/__sdk.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__sdk.css.scss.erb
@@ -1564,13 +1564,19 @@
       padding-left: 28px;
       padding-bottom: 2px;
   }
+  .feature .extras ul li.download {
+      background: url("<%=asset_path('download.png')%>") 0px 5px no-repeat;
+      line-height: 27px;
+      padding-left: 28px;
+      padding-bottom: 2px;
+  }
   .feature .extras ul li.lingyu {
       background: url("<%=asset_path('embed.png')%>") 0px -1px no-repeat;
       line-height: 27px;
       padding-left: 28px;
       padding-bottom: 2px;
   }
-  .feature .extras ul li.category a,.feature .extras ul li.dianjiliang a {
+  .feature .extras ul li.category a,.feature .extras ul li.dianjiliang a,.feature .extras ul li.download a  {
       float: right;
   }
   .feature .extras ul.share {
