--- a/trunk/app/views/coursewares/show.html.erb
+++ b/trunk/app/views/coursewares/show.html.erb
@@ -37,10 +37,10 @@ KTV.data = {
               <script async="async" class="speakerdeck-embed" data-course-slug="<%=@courseware.topic_id%>" data-courseware-slug="<%=@courseware.id%>" data-ratio="<%= @courseware.wh_ratio %>" src="<%=asset_path 'ktv/embed.js'%>" type="text/javascript"></script>
         </div>
     </div>
-    
+
     <div class="extras" style="float:right;margin-right:0px">
       <ul class="delimited share" style="margin-bottom:0;border-top:none">
-        <li style=""><a href="<%= download_courseware_path @courseware %>" target="_blank" class="grey" id="share_pdf">下载源文件</a></li>
+        <li class="download" style="border-top:none">PDF(<%=number_to_human_size(@courseware.down_pdf_size*1000,:precision=>1) %>)<a target="_blank" href="<%= download_courseware_path(@courseware)%>">立即下载</a></li>
       </ul>
     </div>
     
@@ -127,7 +127,7 @@ KTV.data = {
 
       <h1><%=image_tag('share.png',alt:'下载此课件')%></h1>
       <ul class="delimited share">
-        <li><a href="<%= download_courseware_path(@courseware)%>" target="_blank" class="grey" id="share_pdf">下载源文件</a></li>
+        <li class="download" style="border-top:none">PDF(<%=number_to_human_size(@courseware.down_pdf_size*1000,:precision=>1) %>)<a target="_blank" href="<%= download_courseware_path(@courseware)%>">立即下载</a></li>
       </ul>
     </div>
   </div>
